# netbox

./: .dockerignore  .env  .env.example  .env.production  .gitignore  Dockerfile  Makefile  README.md
backend/: monitor.py  pyproject.toml
backend/src/: openapi.yaml
backend/src/docs/: index.html
backend/src/netbox/: __init__.py  __main__.py  checks.py  cli.py  config.py  crypto.py  models.py  network.py  paths.py  ping.py  responses.py  scheduler.py  server.py  speed.py  state.py  storage.py  summary.py  targets.py  terminal.py  timeutils.py  validation.py  wallpaper.py
backend/src/netbox/alerts/: __init__.py  dispatcher.py  email_template.py  models.py  platform.py  schedule.py  smtp_client.py
backend/src/netbox/cli/: __init__.py  app.py
backend/src/netbox/config/: __init__.py  loader.py
backend/src/netbox/core/: __init__.py  models.py
backend/src/netbox/monitor/: __init__.py  network_devices.py  (+5 more)
backend/src/schemas/: platform-settings.patch.schema.json  storage-settings.patch.schema.json  ui-preferences.patch.schema.json
backend/tests/: test_alert_email.py  test_alerts.py  test_alerts_dispatcher.py  test_alerts_storage.py  test_checks.py  test_cli.py  test_config.py  test_crypto.py  test_http_server.py  test_macos.py  test_network.py  test_network_devices.py  test_paths.py  test_ping.py  test_platform_settings.py  test_responses.py  test_scheduler.py  test_security.py  test_server.py  test_speed_policy.py  test_state.py  test_storage.py  test_storage_settings.py  test_summary.py  test_targets.py  test_timeutils.py  test_validation.py  test_wallpaper.py
(+241 files in other folders)
